fix z-index

--- a/src/style.css
+++ b/src/style.css
@@ -49,9 +49,7 @@
   .article__cta {
     width: auto;
     max-width: 50%;
-    padding: 0;
     font-size: calc(var(--ui-btn-md-font-size) * 0.875);
-    text-decoration: underline;
 
     @media (min-width: 768px) {
       font-size: var(--ui-btn-md-font-size);
@@ -102,7 +100,7 @@
   padding: 15px 7px 15px 6px;
   background-color: #d8d8d8;
   text-align: center;
-  z-index: 999;
+  z-index: 2;
 }
 
 .article__badge::after {
@@ -176,6 +174,7 @@
 .article__bottom {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   margin-top: auto;
   line-height: var(--ui-caption-line-height);
 }
@@ -190,6 +189,7 @@
 
 .article__picture {
   display: block;
+  height: 100%;
 }
 
 .article__picture-wrapper {
@@ -234,4 +234,8 @@
   @media (min-width: 480px) {
     width: auto;
   }
+}
+
+.link {
+  padding: 0;
 }
